--- a/src/main/resources/META-INF/rewrite/com.gepardec.wor.recipes.querydsl.update_imports.yml
+++ b/src/main/resources/META-INF/rewrite/com.gepardec.wor.recipes.querydsl.update_imports.yml
@@ -9,6 +9,7 @@ recipeList:
   - org.openrewrite.java.ChangeType:
       oldFullyQualifiedTypeName: com.mysema.query.jpa.impl.JPAQuery
       newFullyQualifiedTypeName: com.querydsl.jpa.impl.JPAQueryFactory
+  - com.gepardec.wor.querydsl.UniqueResultToFetchOne
   - org.openrewrite.java.ChangePackage:
       oldPackageName: com.mysema.query
       newPackageName: com.querydsl.core
