--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,10 @@
             <groupId>org.openrewrite</groupId>
             <artifactId>rewrite-yaml</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.openrewrite</groupId>
+            <artifactId>rewrite-maven</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>org.openrewrite.recipe</groupId>
